<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAE0EE">

    <TextView
        android:id="@+id/shopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#64B8CA"
        android:fontFamily="serif"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/boltneve"
        android:textColor="#13625C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:src="@drawable/diamondlogo"
        app:layout_constraintTop_toBottomOf="@id/shopName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/passwordedittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/emaillogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#7BD1E6"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="#13625C"
        android:textSize="20sp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordedittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/registbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#7BD1E6"
        android:text="@string/regist"
        android:onClick="register"
        android:textColor="#13625C"
        android:textSize="20sp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp" />

    <!-- Dinamikus helykitöltő View -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/registbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"/>
</androidx.constraintlayout.widget.ConstraintLayout>
